use virtual thread executor by default